src/test/deca/context/invalid/created/return/return_void_boolean.deca
// Description :
//    return mauvais type : boolean, demandé void
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (2.7) Type de retour effectif : boolean, déclaré : void

class A{
void met(){
return true;
}
}